# PendantProp

./: .gitignore  README.md  analysis_picture.py  calibrate.ipynb  calibrate_camera.ipynb  calibrate_offsets.ipynb  calibrate_scale.ipynb  check_camera.py  check_measurement.ipynb  check_serial_dilution.ipynb  environment.yml  extract_properties.py  figure_notebook.ipynb  gamma_max.ipynb  generate_properties_table.py  image_wo_st_figure.py  playbook (old).ipynb  playbook.ipynb  playbook1.ipynb  pyproject.toml  requirements.txt  run.py  run_headless.py  run_protocol.py  settings.json  test.py  test_active_learning.py  test_camera.py  test_needle.ipynb  test_protocol.py  transfer_data.py
analysis/: active_learning.py  determine_properties.py  image_analysis.py  mixtures.py  models.py  plots.py  utils.py
config/: settings.json  settings_example.json
config/custom_labware/: 3dprinted_15_tuberack_15000ul.json  needlecoated_1_tiprack_20ul.json  needlepp_96_tiprack_20ul.json  sarstedt_96_tiprack_300ul.json  sponge_448_wellplate_392ul.json
config/info/: layout.csv  sample_info.csv  sample_info_measure_wells.csv
config/layouts/: layout.csv  layout_example.csv
data/: surfpro_exp_filtered.csv  surfpro_exp_predicted.csv
data/comparison_ST_literature/: info.txt
data/comparison_pendantprop_literature/: data.csv  info.txt
data/eval_accuracy/: A_long.csv  PSP0058_total_data.xlsx
data/evaluate_accuracy/: info.txt
data/example_al_cycles/: results - Copy.csv  results.csv
data/example_dynamic_surface_tension/: data.csv  info.txt
data/example_experimental_isotherm/: SDS.csv  info.txt
data/example_image_pendant_drop/: info.txt
data/experiments/: KL_calc.xlsx  overview.csv  table_final - Copy.csv  table_final.csv  table_final_formatted - Copy.csv  table_final_formatted.csv  table_gamma_max_calculate.csv  table_syszkowski_g0_model.csv  table_syszkowski_model.csv  table_syszkowski_model_outlier_removal.csv  total_properties_agg_final.csv  total_properties_agg_gamma_max_calculate.csv  total_properties_agg_syszkowski_g0_model.csv  total_properties_agg_syszkowski_model.csv  total_properties_agg_syszkowski_model_outlier_removal.csv  total_properties_final.csv  (+3 more)
data/mixture/: info.txt
hardware/: cameras.py
legacy/: configuration_old.py  test_camera.py  test_config.py  test_labware_def.py  test_predicter.py
prep/: calculate_mixture_ratios.py  create_stock_concentrations_csv.py  stock_solutions.csv  stock_solutions_calculator.py  stock_solutions_concentrations.csv  stock_solutions_concentrations_backup.csv  surfactant_properties.csv
scripts/: calibrate.ipynb  create_placeholders.py  run_all_tests.py  run_server.py  test.py  test_camera.py  test_camera_scale.py  test_camera_st.py  test_camera_wo.py  test_config.py  test_droplet.py  test_droplet_manager.py  test_image_analysis.py  test_image_analyzer.py  test_needle.ipynb  test_opentrons_api.py  test_plotter.py  test_protocol.py  test_protocol_characterisation.py  test_protocol_measure_wells.py  test_sensor.py  test_washing.py  video_stream.py
server/: routes.py
settings/: default_settings.json  settings.json
surfpro/: README.md  predict_exp.py  surfactant_SMILES.csv
utils/: data_processing.py  load_save_functions.py  logger.py  search_containers.py  utils.py
(+571 files in other folders)
