[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PendantProp"
version = "0.0.0"
description = "A"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "P Laceholder", email = "email@email.com" }]
maintainers = [
  { name = "P Laceholder", email = "email@email.com" },
]
dependencies = [
    "matplotlib",
    "jax",
    "numpy",
    "numpyro",
    "scikit-learn",
    "flask",
    "opencv-python",
    "pypylon",
    "pandas",
    "imutils"
]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
"Source" = "https://github.com/BigChemistry-RobotLab/PendantProp"
"Bug Reports" = "https://github.com/BigChemistry-RobotLab/PendantProp/issues"
"Homepage" = "https://github.com/BigChemistry-RobotLab/PendantProp"
